--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>KK Space Shooter</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>KK Mobile Shooter</title>
     <style>
-        body { margin: 0; background: #000; overflow: hidden; font-family: sans-serif; }
+        body { margin: 0; background: #000; overflow: hidden; font-family: sans-serif; touch-action: none; }
         canvas { display: block; }
-        #ui { position: absolute; top: 10px; left: 10px; color: white; font-size: 20px; }
+        #ui { position: absolute; top: 10px; left: 10px; color: white; font-size: 20px; pointer-events: none; }
     </style>
 </head>
 <body>
@@ -19,7 +20,7 @@
     canvas.height = window.innerHeight;
 
     let score = 0;
-    const player = { x: canvas.width/2, y: canvas.height - 50, w: 40, h: 40, color: '#00dbde' };
+    const player = { x: canvas.width/2 - 20, y: canvas.height - 80, w: 40, h: 40, color: '#00dbde' };
     const bullets = [];
     const enemies = [];
 
@@ -28,8 +29,14 @@
     }
     setInterval(spawnEnemy, 1000);
 
-    window.addEventListener('mousemove', (e) => { player.x = e.clientX - 20; });
-    window.addEventListener('click', () => {
+    // ഫോണിൽ ടച്ച് ചെയ്യുമ്പോൾ നീങ്ങാനും വെടിവെക്കാനും
+    window.addEventListener('touchmove', (e) => {
+        e.preventDefault();
+        let touch = e.touches[0];
+        player.x = touch.clientX - 20;
+    }, { passive: false });
+
+    window.addEventListener('touchstart', (e) => {
         bullets.push({ x: player.x + 18, y: player.y, w: 4, h: 10, color: 'yellow' });
     });
 
@@ -38,11 +45,9 @@
             b.y -= 7;
             if(b.y < 0) bullets.splice(i, 1);
         });
-
         enemies.forEach((e, ei) => {
             e.y += 3;
-            if(e.y > canvas.height) { enemies.splice(ei, 1); }
-
+            if(e.y > canvas.height) enemies.splice(ei, 1);
             bullets.forEach((b, bi) => {
                 if(b.x < e.x + e.w && b.x + b.w > e.x && b.y < e.y + e.h && b.y + b.h > e.y) {
                     enemies.splice(ei, 1);
@@ -68,4 +73,5 @@
 </script>
 </body>
 </html>
+
 
